@@ -1,13 +1,12 @@
 {
   "name": "cubesviewer",
-  "version": "0.8.0",
+  "version": "1.2.1",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-contrib-concat": "^1.0.0",
     "grunt-contrib-jshint": "~0.6.3",
     "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-qunit": "",
-    "grunt-contrib-watch": "",
-    "grunt-contrib-concat": ""
+    "grunt-contrib-requirejs": "^1.0.0",
+    "grunt-contrib-uglify": "~0.2.2"
   }
 }
