@@ -177,8 +177,8 @@ For example, <a id="switchToSeriesTable" href="">click here</a> to switch to Ser
 	<div style="height: 1px; border-top: 1px solid #DDDDDD; padding-top: 4px;"></div>
 	<div style="float: right; white-space: nowrap;">
 		<p style="vertical-align: middle;">
-		<a href="http://databrewery.org/" target="_blank"><img title="Powered by Databrewery Cubes" style="width: 30px; height: 30px;" src="../web/static/img/cubes-logo.png" /></a>
-        <a href="https://github.com/jjmontesl/cubesviewer" target="_blank"><img title="Powered by CubesViewer" style="width: 65px; height: 30px;" src="../web/static/img/cubesviewer-logo.png" /></a>
+        <a href="http://databrewery.org/" target="_blank"><img title="Powered by Databrewery Cubes" style="width: 60px; height: 30px;" src="../web/static/img/cubes-logo.png" /></a>
+        <a href="https://github.com/jjmontesl/cubesviewer" target="_blank"><img title="Powered by CubesViewer" style="width: 55px; height: 30px;" src="../web/static/img/cubesviewer-logo.png" /></a>
 		</p>
 	</div>
 	<div>
